<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_tips"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_status_start" />

        <TextView
            android:id="@+id/tv_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/audio_running"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_aac_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_aac_play" />

        <Button
            android:id="@+id/btn_pcm_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_pcm_play" />
    </LinearLayout>


</LinearLayout>